syntax = "proto3";

option go_package = "github.com/openclimatefix/api/src/proto";

package api;

service QuartzAPI {
  // Get a set of Predicted Yields as a timeseries per location
  rpc GetPredictedTimeseries(GetPredictedTimeseriesRequest) returns (stream GetPredictedTimeseriesResponse) {}
  // Get a set of Actual Yields as a timeseries per location
  rpc GetActualTimeseries(GetActualTimeseriesRequest) returns (stream GetActualTimeseriesResponse) {}
  // Get the predicted yield for a single timestamp across a set of locations
  rpc GetActualCrossSection(GetActualCrossSectionRequest) returns (GetActualCrossSectionResponse) {}
  // Get the actual yield for a single timestamp across a set of locations
  rpc GetPredictedCrossSection(GetPredictedCrossSectionRequest) returns (GetPredictedCrossSectionResponse) {}

  // Get the metadata for a single location
  rpc GetLocationMetadata(GetLocationMetadataRequest) returns (GetLocationMetadataResponse) {}
}

// --- GetPredictedTimeseries --------------------------------------------------------
message GetPredictedTimeseriesRequest {
  repeated string locationIDs = 1;
}

message GetPredictedTimeseriesResponse {
  string locationID = 1;
  repeated PredictedYield yields = 2;
}

message PredictedYield {
  int32 yield_kw = 1;
  int32 timestamp_unix = 2;
  PredictedYieldUncertainty uncertainty = 3;
}

message PredictedYieldUncertainty {
  int32 lower_kw = 1;
  int32 upper_kw = 2;
}

// --- GetActualTimeseries -----------------------------------------------------------
message GetActualTimeseriesRequest {
  repeated string locationIDs = 1;
}

message GetActualTimeseriesResponse {
  string locationID = 1;
  repeated ActualYield yields = 2;
}

message ActualYield {
  int32 yield_kw = 1;
  int32 timestamp_unix = 2;
}

// --- GetPredictedCrossSection ------------------------------------------------------
message GetPredictedCrossSectionRequest {
  repeated string locationIDs = 1;
  int32 timestamp_unix = 2;
}

message GetPredictedCrossSectionResponse {
  int64 timestamp_unix = 1;
  repeated PredictedYieldAtLocation yields = 2;
}

message PredictedYieldAtLocation {
  string locationID = 1;
  int32 yield_kw = 2;
  PredictedYieldUncertainty uncertainty = 3;
}

// --- GetActualCrossSection ---------------------------------------------------------
message GetActualCrossSectionRequest {
  repeated string locationIDs = 1;
  int32 timestamp_unix = 2;
}

message GetActualCrossSectionResponse {
  int64 timestamp_unix = 1;
  repeated ActualYieldAtLocation yields = 2;
}

message ActualYieldAtLocation {
  string locationID = 1;
  int32 yield_kw = 2;
}

// --- GetLocationMetadata -----------------------------------------------------------
message GetLocationMetadataRequest {
  string locationID = 1;
}

message GetLocationMetadataResponse {
  string locationID = 1;
  LocationType locationType = 2;
  SiteLocationMetadata siteMetadata = 3;
  RegionLocationMetadata regionMetadata = 4;
  NationLocationMetadata nationMetadata = 5;
}

enum LocationType {
  UNKNOWN = 0;
  SITE = 1;
  REGION = 2;
  NATION = 3;
}

message SiteLocationMetadata {
  float latitude = 2;
  float longitude = 3;
  int32 orientation_deg = 4;
  int32 tilt_deg = 5;
  int32 capacity_kw = 6;
}

message RegionLocationMetadata {
  string regionName = 1;
  string gspName = 2;
  string capacity_kw = 3;
}

message NationLocationMetadata {
  string nationName = 1;
  string capacity_kw = 2;
}




